<resources>
    <string name="app_name">RepairOrderApp</string>
    <string name="name_label">Name</string>
    <string name="name_header">Repair Order</string>
    <string name="repair_order">Repair Order</string>
    <string name="order_type">Order Type</string>
    <string name="name">Name</string>
    <string name="tax">Tax</string>
    <string name="subtotal">Subtotal</string>
    <string name="_0_0">$0.0</string>
    <string name="labor">labor</string>
    <string name="parts">Parts</string>
    <string name="inspection">Inspection</string>
    <string name="technitian">Technitian</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="total">Total</string>
    <string name="paint">Paint</string>
</resources>