<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    //removed hardcoded values and replaced with string resources

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taxLabel"
        tools:layout_editor_absoluteY="657dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalLabel"
        tools:layout_editor_absoluteY="686dp" />

    <EditText
        android:id="@+id/laborBox"
        android:layout_width="185dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partBox" />

    <EditText
        android:id="@+id/partBox"
        android:layout_width="186dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paintBox" />

    <EditText
        android:id="@+id/inspectBox"
        android:layout_width="186dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/techBox" />

    <EditText
        android:id="@+id/paintBox"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspectBox" />

    <EditText
        android:id="@+id/techBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="186dp" />

    <TextView
        android:id="@+id/laborText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/labor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/laborBox"
        app:layout_constraintEnd_toStartOf="@+id/laborBox"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/partText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/parts"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/partBox"
        app:layout_constraintEnd_toStartOf="@+id/partBox"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/InspectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/inspection"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/inspectBox"
        app:layout_constraintEnd_toStartOf="@+id/inspectBox"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/paintText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/paint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/paintBox"
        tools:layout_editor_absoluteX="46dp" />

    <TextView
        android:id="@+id/techText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/technitian"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/techBox"
        tools:layout_editor_absoluteX="47dp" />


    <TextView
        android:id="@+id/repairOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repair_order"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/orderType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/order_type"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/orderBox"
        tools:layout_editor_absoluteX="46dp" />

    <EditText
        android:id="@+id/orderBox"
        android:layout_width="186dp"
        android:layout_height="37dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/techBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/taxLabel"
        android:layout_width="53dp"
        android:layout_height="17dp"
        android:text="@string/tax"
        app:layout_constraintEnd_toEndOf="@+id/subtotalLabel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/subtotalLabel"
        tools:layout_editor_absoluteY="657dp" />

    <TextView
        android:id="@+id/subtotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toTopOf="@+id/taxLabel"
        tools:layout_editor_absoluteX="185dp" />

    <TextView
        android:id="@+id/totalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/taxLabel"
        app:layout_constraintTop_toBottomOf="@+id/taxLabel" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="82dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/subtotalLabel"
        tools:layout_editor_absoluteY="623dp" />

    <Button
        android:id="@+id/buttonSumbit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/taxLabel"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>